fiddling with wedesoft clj + lwjgl + glfw moon demo