@@ -8,9 +8,7 @@ set GC=
 set TRACE=
 ::set TRACE=-XX:+PrintGCDetails -XX:+TraceClassUnloading -XX:+TraceClassLoading
 
-::set THRUPUT=-d64 -server -XX:+AggressiveOpts 
-::set THRUPUT=-server
-set THRUPUT=
+set UNWARN=--enable-native-access=ALL-UNNAMED --sun-misc-unsafe-memory-access=allow
 
 set XMX=
 ::set XMX=-Xms29g -Xmx29g -Xmn11g 
@@ -21,6 +19,6 @@ set CP=-cp ./src/scripts/clojure;lib/*
 set JAVA="%JAVA_HOME%\bin\java"
 
 set CLJOPTS=-Dclojure.main.report=stderr
-set CMD=%JAVA% %THRUPUT% -ea %GC% %XMX% %TRACE% %OPENS% %CP% %CLJOPTS% clojure.main %* 
+set CMD=%JAVA% %UNWARN% -ea %GC% %XMX% %TRACE% %OPENS% %CP% %CLJOPTS% clojure.main %*
 ::echo %CMD%
 %CMD%
